--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -49,7 +49,7 @@
           <div class="dropdown-content">
 
             <!-- Always available -->
-            <a href="/my-account">Profile</a>
+            <a href="/my-account">My Account</a>
 
             <!-- Manager/Admin Only -->
             <% if (isManager) { %>
