--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -32,7 +32,7 @@
       <div class="dropdown">
         <a href="#" class="nav-link">My Account</a>
         <div class="dropdown-content">
-          <a href="/my-account">Profile</a>
+        <a href="/my-account">My Account</a>
           <a href="/participants">All Participants</a>
           <% if (manager) { %>
             <a href="/milestones">Milestones</a>
